Revert JEI visual optimization